crates/crochet_parser/src/snapshots/crochet_parser__type_ann__tests__type_annotations-11.snap
---
source: crates/crochet_parser/src/type_ann.rs
expression: "parse_type(r#\"\"hello, world!\"\"#)"
---
Lit(
    Str(
        Str {
            span: 0..15,
            value: "hello, world!",
        },
    ),
)
