crates/crochet_parser/src/snapshots/crochet_parser__type_ann__tests__type_annotations-12.snap
---
source: crates/crochet_parser/src/type_ann.rs
expression: "parse_type(\"true\")"
---
Lit(
    Bool(
        Bool {
            span: 0..4,
            value: true,
        },
    ),
)
