crates/crochet_parser/src/snapshots/crochet_parser__type_ann__tests__type_annotations-3.snap
---
source: crates/crochet_parser/src/type_ann.rs
expression: "parse_type(\"{x: number, y: number}\")"
---
Object(
    ObjectType {
        span: 0..22,
        props: [
            TProp {
                span: 1..10,
                name: "x",
                optional: false,
                type_ann: Prim(
                    PrimType {
                        span: 4..10,
                        prim: Num,
                    },
                ),
            },
            TProp {
                span: 12..21,
                name: "y",
                optional: false,
                type_ann: Prim(
                    PrimType {
                        span: 15..21,
                        prim: Num,
                    },
                ),
            },
        ],
    },
)
