crates/crochet_parser/src/snapshots/crochet_parser__type_ann__tests__union_and_intersection_type_annotations.snap
---
source: crates/crochet_parser/src/type_ann.rs
expression: "parse_type(\"A & B & C\")"
---
Intersection(
    IntersectionType {
        span: 0..9,
        types: [
            TypeRef(
                TypeRef {
                    span: 0..1,
                    name: "A",
                    type_params: None,
                },
            ),
            TypeRef(
                TypeRef {
                    span: 4..5,
                    name: "B",
                    type_params: None,
                },
            ),
            TypeRef(
                TypeRef {
                    span: 8..9,
                    name: "C",
                    type_params: None,
                },
            ),
        ],
    },
)
